<resources>
    <string name="app_name">eVocab</string>
    <!-- TWTT Information -->
    <string name="app_name_developed">eVocaby developed by</string>
    <string name="twtt_name">Talking With The Tourist group</string>
    <string name="twtt_fanpage_name">Fanpage: facebook.com/twtt.org</string>
    <!-- Left Menu Title -->
    <string name="nav_play_vocab">Play Vocabs</string>
    <string name="nav_my_vocab">My Vocabs</string>
    <string name="nav_store">Store</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_about">About</string>
    <string name="nav_share">Share</string>
    <!-- Others -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
</resources>
