<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play_vocab"
            android:icon="@drawable/ic_menu_play_vocab"
            android:title="@string/nav_play_vocab"/>

        <item
            android:id="@+id/nav_my_vocab"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/nav_my_vocab"/>
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_cloud_download_24dp"
            android:title="@string/nav_store"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_share"/>
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_feedback"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_24dp"
            android:title="@string/nav_about"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings"/>
    </group>

</menu>
